# OctoSense

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/notebook/: 00_installation.md  01_io.ipynb  02_datasets.ipynb  03_transforms.ipynb  04_models.ipynb  05_pipelines_and_specs.ipynb
demo/notebook/data/esp32/: esp32_c5_test.csv
demo/notebook/data/widar3/: meta.csv
src/octosense/: __init__.py
src/octosense/_internal/: __init__.py  console.py  env.py  worker_backend.py
src/octosense/benchmarks/: __init__.py  api.py
src/octosense/benchmarks/artifacts/: __init__.py  environment.py  materialization.py  metrics.py  provenance.py  reports.py  run_manifest.py
src/octosense/benchmarks/evaluators/: __init__.py  _shared.py  classification.py  localization.py  pose.py  respiration.py
src/octosense/benchmarks/metrics/: __init__.py  _regression.py  classification.py  localization.py  pose.py  respiration.py
src/octosense/benchmarks/protocols/: __init__.py  _catalog.py
src/octosense/cli/: __init__.py  check_contracts.py  export_spec.py  inspect_dataset.py  run.py
src/octosense/core/: __init__.py  describe.py  errors.py  types.py
src/octosense/core/contracts/: __init__.py  axis.py  model.py  task.py  transform.py
src/octosense/datasets/: __init__.py  api.py  base.py  catalog.py  fingerprint.py  registry.py
src/octosense/datasets/builtin/: __init__.py
src/octosense/datasets/core/: __init__.py  builder.py  manifest.py  materialization.py  schema.py  task_binding.py
src/octosense/datasets/storage/: __init__.py  cache.py  checksums.py  downloader.py  receipts.py
src/octosense/datasets/views/: __init__.py  dataset_view.py  filter.py  group_split.py  in_memory.py  lazy_view.py  leakage.py  partition.py
src/octosense/io/: __init__.py  registry.py  tensor.py
src/octosense/models/: __init__.py  api.py  boundary.py  catalog.py  handles.py  registry.py
src/octosense/pipelines/: __init__.py  _runtime_spec.py  api.py  builder.py  introspection.py  recipes.py
src/octosense/tasks/: __init__.py  label_spaces.py  leakage.py  outputs.py
src/octosense/transforms/: __init__.py  api.py
src/octosense/viz/: __init__.py  axes.py  quicklook.py  radar.py  wifi.py
(+300 files in other folders)
